extra section added

--- a/index.html
+++ b/index.html
@@ -134,6 +134,30 @@
 
 
         </section>
+        <section class="extra-container">
+            <div class="marquee">
+                <marquee width="560px" direction=center height="40px">Copa America 2021 Final Highlights
+                </marquee><br>
+                <div class="video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/sDFr2Yzd-8s"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    </video>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="form-container">
+            <form action="" class="signup-form">
+                <h2>Grab our official membership.</h2>
+                <input type="email" name="email" id="" placeholder="Enter your mail">
+                <input type="password" name="password" id="" placeholder="Enter your password">
+                <input type="password" name="password" id="" placeholder="Confirm your password">
+                <button type="submit">Signup <i class="fas fa-sign-in-alt"></i></button>
+            </form>
+        </section>
 
     </main>
 
