--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         </section>
     </header>
     <main>
+        <!----------------------------
+     Player Section Design
+-------------------------- -->
         <section class="players-container">
             <div class="players">
                 <div class="player">
@@ -134,6 +137,12 @@
 
 
         </section>
+
+        <!----------------------------
+     Extra Section Design
+    -------------------------- -->
+
+        <!-- VIDEO -->
         <section class="extra-container">
             <div class="marquee">
                 <marquee width="560px" direction=center height="40px">Copa America 2021 Final Highlights
@@ -149,6 +158,7 @@
 
         </section>
 
+        <!-- FORM -->
         <section class="form-container">
             <form action="" class="signup-form">
                 <h2>Grab our official membership.</h2>
@@ -160,7 +170,9 @@
         </section>
 
     </main>
-
+    <!----------------------------
+     Footer Section Design
+    -------------------------- -->
     <footer>
         <div class="logo">
             <img src="media/Logo.png" alt="">
