player section and media-query added

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <body>
     <!-----------------
-   Heading Section Design
--------------------- -->
+     Heading Section Design
+    -------------------- -->
     <header>
-        <section class="heading-container">
+        <section class="heading-container container">
             <div class="heading">
                 <h1 class="heading-title">Conmebol Copa America 2021</h1>
                 <div class="button-live">
@@ -34,103 +34,115 @@
 
     <!----------------------------
      Player Section Design
--------------------------- -->
+    -------------------------- -->
     <main>
-        <section class="players-container">
+        <section class="players-container container">
             <div class="players">
                 <div class="player">
                     <img src="media/players/player-1.png" alt="">
-                    <div class="player-info">
+                    <div class="player-detail">
                         <h3>Neymar Jr</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, perspiciatis!</p>
+                        <p>The secret is to believe in your dreams; in your potential that you can be like your star,
+                            keep searching, keep believing and don’t lose faith in yourself.</p>
                     </div>
 
                 </div>
                 <div class="player">
                     <img src="media/players/player-2.png" alt="">
-                    <div class="player-info">
+                    <div class="player-detail">
                         <h3>Lionel Messi</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, perspiciatis!</p>
+                        <p>The secret is to believe in your dreams; in your potential that you can be like your star,
+                            keep searching, keep believing and don’t lose faith in yourself.</p>
                     </div>
 
                 </div>
                 <div class="player">
                     <img src="media/players/player-3.png" alt="">
-                    <div class="player-info">
+                    <div class="player-detail">
                         <h3>Cristiano Ronaldo</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, perspiciatis!</p>
+                        <p>The secret is to believe in your dreams; in your potential that you can be like your star,
+                            keep searching, keep believing and don’t lose faith in yourself.</p>
                     </div>
 
                 </div>
                 <div class="player">
                     <img src="media/players/player-4.png" alt="">
-                    <div class="player-info">
+                    <div class="player-detail">
                         <h3>Paulo Dybala</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, perspiciatis!</p>
+                        <p>The secret is to believe in your dreams; in your potential that you can be like your star,
+                            keep searching, keep believing and don’t lose faith in yourself.</p>
                     </div>
 
                 </div>
                 <div class="player">
                     <img src="media/players/player-5.png" alt="">
-                    <div class="player-info">
+                    <div class="player-detail">
                         <h3>Mesut Ozil </h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, perspiciatis!</p>
+                        <p>The secret is to believe in your dreams; in your potential that you can be like your star,
+                            keep searching, keep believing and don’t lose faith in yourself.</p>
                     </div>
 
                 </div>
                 <div class="player">
                     <img src="media/players/player-6.png" alt="">
-                    <div class="player-info">
+                    <div class="player-detail">
                         <h3>Mauro Icardi </h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, perspiciatis!</p>
+                        <p>The secret is to believe in your dreams; in your potential that you can be like your star,
+                            keep searching, keep believing and don’t lose faith in yourself.</p>
                     </div>
 
                 </div>
                 <div class="player">
                     <img src="media/players/player-7.png" alt="">
-                    <div class="player-info">
+                    <div class="player-detail">
                         <h3>Di Maria</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, perspiciatis!</p>
+                        <p>The secret is to believe in your dreams; in your potential that you can be like your star,
+                            keep searching, keep believing and don’t lose faith in yourself.</p>
                     </div>
 
                 </div>
                 <div class="player">
                     <img src="media/players/player-8.png" alt="">
-                    <div class="player-info">
+                    <div class="player-detail">
                         <h3>Kylian Mbappé</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, perspiciatis!</p>
+                        <p>The secret is to believe in your dreams; in your potential that you can be like your star,
+                            keep searching, keep believing and don’t lose faith in yourself.</p>
                     </div>
 
                 </div>
                 <div class="player">
                     <img src="media/players/player-9.png" alt="">
-                    <div class="player-info">
+                    <div class="player-detail">
                         <h3>Mohamed Salah</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, perspiciatis!</p>
+                        <p>The secret is to believe in your dreams; in your potential that you can be like your star,
+                            keep searching, keep believing and don’t lose faith in yourself.</p>
                     </div>
 
                 </div>
                 <div class="player">
                     <img src="media/players/player-10.png" alt="">
-                    <div class="player-info">
+                    <div class="player-detail">
                         <h3>Harry Kane</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, perspiciatis!</p>
+                        <p>The secret is to believe in your dreams; in your potential that you can be like your star,
+                            keep searching, keep believing and don’t lose faith in yourself.</p>
                     </div>
 
                 </div>
                 <div class="player">
                     <img src="media/players/player-11.png" alt="">
-                    <div class="player-info">
+                    <div class="player-detail">
                         <h3>Kevin De Bruyne</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, perspiciatis!</p>
+                        <p>The secret is to believe in your dreams; in your potential that you can be like your star,
+                            keep searching, keep believing and don’t lose faith in yourself.</p>
                     </div>
 
                 </div>
                 <div class="player">
                     <img src="media/players/player-12.png" alt="">
-                    <div class="player-info">
+                    <div class="player-detail">
                         <h3>Philippe Coutinho</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, perspiciatis!</p>
+                        <p>The secret is to believe in your dreams; in your potential that you can be like your star,
+                            keep searching, keep believing and don’t lose faith in yourself.</p>
                     </div>
 
                 </div>
@@ -140,31 +152,55 @@
         </section>
 
         <!----------------------------
-    Extra Section Design
--------------------------- -->
+            Extra Section Design
+        -------------------------- -->
 
         <!-- VIDEO -->
-        <section class="extra-container">
-            <div class="marquee">
-                <marquee width="560px" direction=center height="40px">Copa America 2021 Final Highlights
-                </marquee><br>
-                <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/sDFr2Yzd-8s"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    </video>
+        <section class="extra-container container">
+            <div class="video-container">
+                <div class="marquee">
+                    <h3>Copa America 2021 <span> Semifinal-01 </span> Highlights</h3>
+                    <div class="video">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/SAMjSwSa4Dk"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        </video>
+                    </div>
+                </div>
+
+                <div class="marquee">
+                    <h3>Copa America 2021 <span> Final </span> Highlights</h3>
+                    <div class="video">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/sDFr2Yzd-8s"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        </video>
+                    </div>
+                </div>
+
+                <div class="marquee">
+                    <h3>Copa America 2021 <span> Semifinal-02 </span> Highlights</h3>
+                    <div class="video">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/NbvnpBwA2Zs"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        </video>
+                    </div>
                 </div>
             </div>
 
         </section>
 
         <!-- FORM -->
-        <section class="form-container">
+        <section class="form-container container">
             <form action="" class="signup-form">
-                <h2>Grab our official membership.</h2>
+                <h1>Grab our official membership.</h1>
+                <input type="text" name="name" id="" placeholder="Enter your name">
                 <input type="email" name="email" id="" placeholder="Enter your mail">
-                <input type="password" name="password" id="" placeholder="Enter your password">
+                <input type="password" name="password" id="" placeholder="Set your password">
                 <input type="password" name="password" id="" placeholder="Confirm your password">
                 <button type="submit">Signup <i class="fas fa-sign-in-alt"></i></button>
             </form>
@@ -174,7 +210,7 @@
     <!----------------------------
      Footer Section Design
     -------------------------- -->
-    <footer>
+    <footer class="container">
         <div class="logo">
             <img src="media/Logo.png" alt="">
         </div>
